Fix namespacing and update dropbox proxy to use new api

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -75,7 +75,7 @@
 				<button onclick="Lively3D.UI.ShowSaveDialog()">Save Desktop</button>
 				<button onclick="Lively3D.UI.ShowStateList()">Load Desktop</button>
 				<button onclick="Lively3D.UI.ShowSceneList()">Load Scene</button>
-				<button onclick="Lively3D.UI.ChangeScene()">Switch Scene</button>
+				<button onclick="Lively3D.ChangeScene()">Switch Scene</button>
 				<input type="checkbox" name="UseNode" value="Node" onchange="Lively3D.UI.ToggleNode()"/> Use Node.js
 				<button onclick="Lively3D.UI.ShowAbout()" style="position: absolute; bottom: 0px; left: 0px">About</button>
 				<button onclick="Lively3D.Sync()">Sync for local usage</button>
